[gd_scene load_steps=41 format=2]

[ext_resource path="res://src/Boss.gd" type="Script" id=1]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-idle.png" type="Texture" id=2]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-idle2.png" type="Texture" id=3]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-idle3.png" type="Texture" id=4]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-idle4.png" type="Texture" id=5]
[ext_resource path="res://bin/round_explosion/PNG/frame0002.png" type="Texture" id=6]
[ext_resource path="res://bin/round_explosion/PNG/frame0008.png" type="Texture" id=7]
[ext_resource path="res://bin/round_explosion/PNG/frame0012.png" type="Texture" id=8]
[ext_resource path="res://bin/round_explosion/PNG/frame0016.png" type="Texture" id=9]
[ext_resource path="res://bin/round_explosion/PNG/frame0017.png" type="Texture" id=10]
[ext_resource path="res://bin/round_explosion/PNG/frame0020.png" type="Texture" id=11]
[ext_resource path="res://bin/round_explosion/PNG/frame0023.png" type="Texture" id=12]
[ext_resource path="res://bin/round_explosion/PNG/frame0026.png" type="Texture" id=13]
[ext_resource path="res://bin/round_explosion/PNG/frame0029.png" type="Texture" id=14]
[ext_resource path="res://bin/round_explosion/PNG/frame0030.png" type="Texture" id=15]
[ext_resource path="res://bin/round_explosion/PNG/frame0038.png" type="Texture" id=16]
[ext_resource path="res://bin/round_explosion/PNG/frame0044.png" type="Texture" id=17]
[ext_resource path="res://bin/round_explosion/PNG/frame0048.png" type="Texture" id=18]
[ext_resource path="res://bin/round_explosion/PNG/frame0006.png" type="Texture" id=19]
[ext_resource path="res://bin/round_explosion/PNG/frame0015.png" type="Texture" id=20]
[ext_resource path="res://bin/round_explosion/PNG/frame0025.png" type="Texture" id=21]
[ext_resource path="res://bin/round_explosion/PNG/frame0032.png" type="Texture" id=22]
[ext_resource path="res://bin/round_explosion/PNG/frame0039.png" type="Texture" id=23]
[ext_resource path="res://bin/round_explosion/PNG/frame0046.png" type="Texture" id=24]
[ext_resource path="res://bin/round_explosion/PNG/frame0055.png" type="Texture" id=25]
[ext_resource path="res://bin/round_explosion/PNG/frame0052.png" type="Texture" id=26]
[ext_resource path="res://bin/round_explosion/PNG/frame0005.png" type="Texture" id=27]
[ext_resource path="res://bin/round_explosion/PNG/frame0018.png" type="Texture" id=28]
[ext_resource path="res://bin/round_explosion/PNG/frame0022.png" type="Texture" id=29]
[ext_resource path="res://bin/round_explosion/PNG/frame0036.png" type="Texture" id=30]
[ext_resource path="res://bin/round_explosion/PNG/frame0042.png" type="Texture" id=31]
[ext_resource path="res://bin/round_explosion/PNG/frame0050.png" type="Texture" id=32]
[ext_resource path="res://bin/round_explosion/PNG/frame0060.png" type="Texture" id=33]
[ext_resource path="res://bin/round_explosion/PNG/frame0066.png" type="Texture" id=34]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-galloping.png" type="Texture" id=35]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-galloping2.png" type="Texture" id=36]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-galloping3.png" type="Texture" id=37]
[ext_resource path="res://bin/enemy_sprites/nightmare_sprites/nightmare-galloping4.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 6 ), ExtResource( 27 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 16 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), null ],
"loop": false,
"name": "Die",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "Gallop",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.79546, 28.2097 )

[node name="Boss" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 13.945, 17.9401 )
scale = Vector2( 4.87544, 1.36851 )
shape = SubResource( 2 )

[node name="Sight" type="RayCast2D" parent="." index="2"]

position = Vector2( -33.0544, 18.8882 )
enabled = false
exclude_parent = true
cast_to = Vector2( -40, 0 )
collision_mask = 1

[node name="AttackTimer" type="Timer" parent="." index="3"]

process_mode = 0
wait_time = 3.0
one_shot = true
autostart = false

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 0
wait_time = 3.0
one_shot = true
autostart = false

[node name="BoostTimer" type="Timer" parent="." index="5"]

process_mode = 0
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]


